changes to config.yml description

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: Panting Panda | Ambient Music
 email: 
 description: 
-  Ambient composer panting pandas website.
+  This is the official site of **Panting Panda**, the artist alias of composer Moniet Sawhney.
+  Visit to listen and view some of the ambient/post-rock compositions, or just for fun!
 baseurl: "" 
 url: "" 
 
