yml desc changed

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Panting Panda | Ambient Music
 email: 
 description: 
-  This is the official site of **Panting Panda**, the artist alias of composer Moniet Sawhney.
+  This is the official site of Panting Panda, the artist alias of composer Moniet Sawhney.
   Visit to listen and view some of the ambient/post-rock compositions, or just for fun!
 baseurl: "" 
 url: "" 
