changed comfig.yml desc

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Panting Panda
 email:
 description:
-  This is the official site of Panting Panda, the artist alias of ambient/electronic composer Moniet Sawhney.
+  This is the official site of Panting Panda, the moniker of ambient/electronic composer Moniet Sawhney.
 baseurl: ""
 url: ""
 
